# kline-research

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
deploy/: README.md  cloudflared.service  healthcheck.sh  install-release.sh  kline.service  prune-releases.sh  rollback.sh  run-final-data-build.sh  run-formal-research.sh  wait-final-build-then-research.sh
docs/: development-completion.md  product-plan-v1.2-data-foundation.md  user-guide.md
scripts/: audit_security_identities.py  backup_data.py  cleanup_artifacts.py  cleanup_market.py  export_openapi.py  import_representative.py  probe_providers.py  pull_server_backups.ps1  report_research_acceptance.py  restore_data.py  run_final_data_build.py  run_formal_research.py
tests/: test_access.py  test_adjustment_engine.py  test_akshare_source.py  test_api.py  test_artifact_cleanup.py  test_artifact_lineage.py  test_backup_pull_script.py  test_batch_labels.py  test_data_backup.py  test_data_pipeline.py  test_deploy_assets.py  test_download_source.py  test_drift.py  test_eastmoney_source.py  test_feature_batch.py  test_features.py  test_history_backfill.py  test_identity_audit.py  test_job_coordinator.py  test_job_store.py  test_maintenance_scheduler.py  test_market_cleanup.py  test_market_coverage.py  test_market_rules.py  test_model_registry.py  test_p1.py  test_provider_gate_v2.py  test_provider_policy.py  test_provider_probe.py  test_research_registry.py  test_score.py  test_score_batch.py  test_security_identity.py  test_single_writer.py  test_storage.py  test_validation.py  (+1 more)
(+77 files in other folders)
