[project]
name = "kline-research"
version = "0.1.0"
description = "Local AkShare K-line research and P1 label audit system"
requires-python = ">=3.12,<3.15"
dependencies = [
  "akshare>=1.18,<2",
  "duckdb>=1.2,<2",
  "fastapi>=0.115,<1",
  "numpy>=2.1,<3",
  "pandas>=2.2,<3",
  "pyarrow>=18,<22",
  "pydantic-settings>=2.7,<3",
  "PyJWT[crypto]>=2.10,<3",
  "requests>=2.32,<3",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kline"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
